# Qt_Jenkins_Unit_Tests

./: CMakeLists.txt  Jenkinsfile  logic.cpp  logic.h  main.cpp  runTest.sh  testlogic.cpp  testlogic.h  untitled.pro
